Base folder structure test map Luminus disabled

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+GameDefaultMap=/Game/ProjectXyrus/Levels/TestLevel.TestLevel
 
 
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/ProjectXyrus/Levels/TestLevel.TestLevel
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -14,7 +14,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
+r.DynamicGlobalIlluminationMethod=0
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
 
