Setup modules for project, network, online Subsystem plugins other...

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,6 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ProjectXyrus/Levels/TestLevel.TestLevel
-
-
 EditorStartupMap=/Game/ProjectXyrus/Levels/TestLevel.TestLevel
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
@@ -27,4 +25,24 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/ProjectXyrus")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/ProjectXyrus")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="ProjectXyrusGameModeBase")
+
+[OnlineSubsystem]
+DefaultPlatformService=<Default Platform Identifier>
+
+[SystemSettings]
+net.UseAdaptiveNetUpdateFrequency=1
+
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=A5CEBA6C41534600003328A971B0E668
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
 
