--- a/ProjectXyrus.uproject
+++ b/ProjectXyrus.uproject
@@ -15,10 +15,6 @@
 	],
 	"Plugins": [
 		{
-			"Name": "GameplayAbilities",
-			"Enabled": true
-		},
-		{
 			"Name": "Bridge",
 			"Enabled": true,
 			"SupportedTargetPlatforms": [
@@ -28,39 +24,16 @@
 			]
 		},
 		{
-			"Name": "AndroidDeviceProfileSelector",
-			"Enabled": false
+			"Name": "GameplayAbilities",
+			"Enabled": true
 		},
 		{
-			"Name": "AndroidMedia",
-			"Enabled": false
+			"Name": "OnlineSubsystem",
+			"Enabled": true
 		},
 		{
-			"Name": "AndroidMoviePlayer",
-			"Enabled": false
-		},
-		{
-			"Name": "OnlineSubsystemGooglePlay",
-			"Enabled": false,
-			"SupportedTargetPlatforms": [
-				"Android"
-			]
-		},
-		{
-			"Name": "AndroidPermission",
-			"Enabled": false
-		},
-		{
-			"Name": "AndroidFileServer",
-			"Enabled": false
-		},
-		{
-			"Name": "AppleMoviePlayer",
-			"Enabled": false
-		},
-		{
-			"Name": "AppleImageUtils",
-			"Enabled": false
+			"Name": "OnlineSubsystemUtils",
+			"Enabled": true
 		}
 	]
 }
