--- a/ProjectXyrus.uproject
+++ b/ProjectXyrus.uproject
@@ -34,6 +34,10 @@
 		{
 			"Name": "OnlineSubsystemUtils",
 			"Enabled": true
+		},
+		{
+			"Name": "GameFeatures",
+			"Enabled": true
 		}
 	]
 }
