Renaming, started network module

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ProjectXyrus/Levels/TestLevel.TestLevel
 EditorStartupMap=/Game/ProjectXyrus/Levels/TestLevel.TestLevel
+ServerDefaultMap=/Game/ProjectXyrus/Levels/TestLevel.TestLevel
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -27,7 +28,8 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="ProjectXyrusGameModeBase")
 
 [OnlineSubsystem]
-DefaultPlatformService=<Default Platform Identifier>
+;DefaultPlatformService=<Default Platform Identifier>
+DefaultPlatformService=Null
 
 [SystemSettings]
 net.UseAdaptiveNetUpdateFrequency=1
