Sever base initialization

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,14 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ProjectXyrus/Levels/TestLevel.TestLevel
 EditorStartupMap=/Game/ProjectXyrus/Levels/TestLevel.TestLevel
-ServerDefaultMap=/Game/ProjectXyrus/Levels/TestLevel.TestLevel
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/ProjectXyrus/Levels/TestLevel.TestLevel
+ServerDefaultMap=/Game/ProjectXyrus/GameModes/Server/ServerLevel.ServerLevel
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultServerGameMode=None
+TransitionMap=None
+bUseSplitscreen=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
