--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -25,3 +25,10 @@ bShouldGuessTypeAndNameInEditor=True
 bShouldAcquireMissingChunksOnLoad=False
 bShouldWarnAboutInvalidAssets=True
 MetaDataTagsForAssetRegistry=()
+
+[/Script/ProjectXyrus.PX_ServerStartupSettings]
+KeyServerPreset=KeyServerPreset
+ServerPresetList=(("Test", (StartMap="/Game/ProjectXyrus/Levels/TestLevel.TestLevel")),("Test2", (StartMap="/Game/ProjectXyrus/Levels/TestLevel.TestLevel")))
+bUseOverridenServerPreset=True
+OverridenServerPreset=Test
+
