--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -32,3 +32,6 @@ ServerPresetList=(("Test", (StartMap="/Game/ProjectXyrus/Levels/TestLevel.TestLe
 bUseOverridenServerPreset=True
 OverridenServerPreset=Test
 
+[/Script/ProjectXyrus.PX_StateMachineSettings]
+StateMachinePresets=(("MainMenu", (ScenarioListClass=Class'"/Script/ProjectXyrus.PX_ScenarioListTest"',StateClasses=(("Test1", Class'"/Script/ProjectXyrus.PX_StateTest"'),("Test2", Class'"/Script/ProjectXyrus.PX_StateTest"')))))
+
