Updated state machine, added base functional for services

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -34,4 +34,5 @@ OverridenServerPreset=Test
 
 [/Script/ProjectXyrus.PX_StateMachineSettings]
 StateMachinePresets=(("MainMenu", (ScenarioListClass=Class'"/Script/ProjectXyrus.PX_ScenarioListTest"',StateClasses=(("Test1", Class'"/Script/ProjectXyrus.PX_StateTest"'),("Test2", Class'"/Script/ProjectXyrus.PX_StateTest"')))))
+ServiceStatesList=(("Service1", Class'"/Script/ProjectXyrus.PX_StateTest"'),("Service2", Class'"/Script/ProjectXyrus.PX_StateTest"'))
 
